# ocaml-cvc5

./: .gitignore  .gitmodules  .ocamlformat  CHANGES.md  LICENSE  README.md  cvc5.ml  cvc5.mli  cvc5.opam  cvc5_external.ml  cvc5_stubs.cpp  dune  dune-project  flake.nix  toy.ml
.github/workflows/: build.yml  release.yml
api/: build_enum_kind.cpp  build_enum_kind.ml  build_enums.cpp  build_enums.ml  cvc5_enums.ml  dune  kind.ml
examples/: bitv.ml  bitv.smt2  dune  fp.ml  fp.smt2  functions.ml  incremental.ml  toy.ml
scripts/: api_coverage.py
test/: dune  test_api.ml  test_model.ml  test_reset.ml  test_terms.ml  test_trivial.ml  test_val_interp.ml
