(rule
 (deps
  (source_tree vendor))
 (targets libpicpolyxx.a libpicpoly.a libcadical.a libcvc5.a cvc5_export.h)
 (action
  (no-infer
   (progn
    (chdir
     vendor/cvc5
     (progn
      (run ./configure.sh --auto-download --static)
      (run make -C build -j 4)))
    (copy vendor/cvc5/build/src/libcvc5.a libcvc5.a)
    (copy vendor/cvc5/build/deps/lib/libcadical.a libcadical.a)
    (copy vendor/cvc5/build/deps/lib/libpicpoly.a libpicpoly.a)
    (copy vendor/cvc5/build/deps/lib/libpicpolyxx.a libpicpolyxx.a)
    (copy vendor/cvc5/build/include/cvc5/cvc5_export.h cvc5_export.h)))))

(subdir
 vendor/cvc5/include/cvc5
 (rule
  (deps ../../../../cvc5_export.h)
  (targets cvc5_export.h)
  (action
   (copy %{deps} %{targets}))))

(library
 (public_name cvc5)
 (name cvc5)
 (modules cvc5 cvc5_enums cvc5_external)
 (no_dynlink)
 (foreign_stubs
  (language cxx)
  (names cvc5_stubs)
  (flags :standard -std=c++17 -I/opt/homebrew/include)
  (include_dirs vendor/cvc5/include vendor/cvc5/src vendor/cvc5/src/lib))
 (foreign_archives cvc5 cadical picpoly picpolyxx)
 (c_library_flags :standard -std=c++17 -L/opt/homebrew/lib -lgmp))

(rule
 (deps ./api/cvc5_enums.exe)
 (target cvc5_enums.ml)
 (action
  (with-stdout-to
   %{target}
   (run %{deps}))))
