(executable
 (name cvc5_enums)
 (modules cvc5_enums)
 (libraries build_enums))

(library
 (name build_enums)
 (modules build_enums)
 (foreign_stubs
  (language cxx)
  (names build_enums)
  (flags :standard -std=c++17 -I/opt/homebrew/include)
  (include_dirs 
   ../vendor/cvc5/include))
 (c_library_flags 
  :standard -std=c++17 
  -L/opt/homebrew/lib 
  -lgmp
  -lcvc5
  -lcadical
  -lpicpoly
  -lpicpolyxx
  -L%{project_root}/_build/default/))